--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -64,8 +64,8 @@
     "    2. [Exercise \"Churn\"](071-exercise-ensembles_churn.ipynb)\n",
     "8.  Dimensionality Reduction\n",
     "    1. [Notebook](081-dimensionality_reduction.ipynb)\n",
-    "    2. [Exercise \"Faces\"](082-faces.ipynb)\n",
-    "9. Unsupervised Learning\n",
+    "    2. [Exercise \"Faces\"](082-exercise-faces.ipynb)\n",
+    "9.  Unsupervised Learning\n",
     "    1. [Notebook](091-unsupervised_learning.ipynb)\n",
     "\n",
     "   \n",
@@ -88,8 +88,12 @@
     "### SOLUTIONS\n",
     "\n",
     "[Brussels Temperatures](solutions/011-the_machine_learning_landscape_solution.ipynb)  \n",
-    "[Building OAT](solutions/021-exercise_building_oat_solution.ipynb)\n",
-    "\n",
+    "[Building OAT](solutions/021-exercise_building_oat_solution.ipynb)  \n",
+    "[Heart Disease](solutions/031-exercise_heart_disease_solution.ipynb)  \n",
+    "[Women Clothing Sizes](solutions/042-women_clothing_sizes_prediction_solution.ipynb)  \n",
+    "[Demographic Student Score](solutions/051-exercise_demographic_studentscore_svm_solution.ipynb)  \n",
+    "[Penquins](solutions/061-exercise_penguins_solution.ipynb)  \n",
+    "  \n",
     "\n",
     "\n",
     "\n",
