--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -24,7 +24,8 @@
     "## INTRODUCTION\n",
     "\n",
     "This course is based on the following book. \n",
-    "![Hands-on Machine Learning with Scikit-Learn, Keras, and TensorFlow](img/book.png).  \n",
+    "\n",
+    "<img width=30% src=\"img/book.png\"> \n",
     "\n",
     "## Table of Contents\n",
     "\n",
@@ -66,22 +67,27 @@
     "    1. [Notebook](081-dimensionality_reduction.ipynb)\n",
     "    2. [Exercise \"Faces\"](082-exercise-faces.ipynb)\n",
     "9.  Unsupervised Learning\n",
-    "    1. [Notebook](091-unsupervised_learning.ipynb)\n",
-    "\n",
-    "   \n",
+    "    1.  Clustering\n",
+    "        1. [Notebook](091-unsupervised_learning.ipynb)\n",
+    "        2. [Exercise Faces](092-unsupervised_learning_exercise.ipynb)\n",
+    "    2. Association Rules\n",
+    "        1. [Theory](093-association_rules_theory.ipynb)\n",
+    "        2. [Demo](094-association_rules_demo.ipynb)\n",
+    "        3. [Exercise Adventureworks](095-association_rules_exercise.ipynb)   \n",
+    " \n",
     "###  PART 2 - Neural Networks and Deep Learning\n",
     "\n",
-    "1.  Artificial Neural Networks with Keras\n",
+    "10. Artificial Neural Networks with Keras\n",
     "    1.  [Notebook](100-neural_nets_with_keras.ipynb)\n",
     "    2.  [Exericse Penguins - Breast Cancer](101-exercise_penguins_breast_cancer.ipynb)\n",
-    "2.  Training Deep Neural Networks\n",
+    "11. Training Deep Neural Networks\n",
     "    1.  [Notebook](110-training_deep_neural_networks.ipynb)\n",
     "    2.  [Excercise Churn](111-exercise_churn.ipynb)\n",
-    "3.  Document Classification & NLP\n",
+    "12. Document Classification & NLP\n",
     "    1.  [Notebook](120-document_classification_and_nlp.ipynb)\n",
     "    2.  [Case SPAM](121-pretrained_word_embeddings_case_spam.ipynb)\n",
     "    3.  [Exercise E-mail classification](122-exercise_email_classification.ipynb)\n",
-    "4.  Deep Computer Vision Using Convolutional Neural Networks\n",
+    "13. Deep Computer Vision Using Convolutional Neural Networks\n",
     "    1.  [Notebook](130-deep_computer_vision_with_cnns.ipynb)\n",
     "    2.  [Exercice CNN -MNIST](131-deep_computer_vision_with_cnns_exercise_mnist.ipynb)\n",
     "\n",
